# libmaix

./: .gitignore  .gitmodules  Kconfig  LICENSE  README.md  README_ZH.md
.github/workflows/: test_build.yml
components/component2/: Kconfig
components/component2/src/: lib2.c
components/libimage/: CMakeLists.txt  Kconfig
components/libimage/include/: libimage.h  libmaix_debug.h
components/libimage/src/: libimage.cpp
components/libmaix/: .gitignore  CMakeLists.txt  Kconfig
components/libmaix/include/: libmaix_cam.h  libmaix_debug.h  libmaix_disp.h  libmaix_err.h  libmaix_image  libmaix_image.h  libmaix_nn.h  libmaix_nn_classifier.h  libmaix_nn_decoder.h  libmaix_nn_decoder_ctc.h  libmaix_nn_decoder_license_plate_location.h  libmaix_nn_decoder_pose.h  libmaix_nn_decoder_retinaface.h  libmaix_nn_decoder_yolo2.h  libmaix_nn_face.h  libmaix_nn_new.h  mdsc.h  mud.h  standard_api.h
components/libmaix/lib/arch/r329/src/: CMakeLists.txt
components/libmaix/lib/arch/r329/src/libmaix_cam/: CMakeLists.txt
components/libmaix/lib/arch/r329/src/libmaix_cam/src/: libmaix_cam.cpp  libmaix_cam.h  libmaix_cam_priv.h  v4l2_capture.hpp
components/libmaix/lib/arch/r329/src/libmaix_disp/: CMakeLists.txt
components/libmaix/lib/arch/r329/src/libmaix_disp/src/: framebuffer.c  libmaix_disp.c  libmaix_disp.h  libmaix_disp_priv.h  libmaix_disp_test.c
components/libmaix/lib/arch/r329/src/libmaix_image/: CMakeLists.txt
components/libmaix/lib/arch/r329/src/libmaix_image/src/: libmaix_image.c  libmaix_image.cpp  libmaix_image.h
components/libmaix/lib/arch/r329/src/libmaix_nn/: CMakeLists.txt  libmaix_nn.c  standard_api.h
components/libmaix/lib/arch/r329/src/libmaix_nn/src/: libmaix_nn.cpp  libmaix_nn.h  standard_api.h
components/libmaix/lib/arch/r329/src/libmaix_nn_app/: CMakeLists.txt
components/libmaix/lib/arch/r329/src/libmaix_nn_app/libmaix_nn_app_Classifier/: libmaix_nn_classifier.c  libmaix_nn_classifier.h
components/libmaix/lib/arch/r329/src/libmaix_nn_app/libmaix_nn_app_FaceRecognize/: libmaix_nn_face.c
components/libmaix/lib/arch/r329/src/libmaix_nn_decoder/: CMakeLists.txt
components/libmaix/lib/arch/r329/src/libmaix_nn_decoder/libmaix_nn_decoder_retinaface/src/: libmaix_nn_decoder_retinaface.c  libmaix_nn_decoder_retinaface.h
components/libmaix/lib/arch/r329/src/libmaix_nn_decoder/libmaix_nn_decoder_yolo2/src/: libmaix_nn_decoder_yolo2.c  libmaix_nn_decoder_yolo2.h
components/libmaix/lib/arch/r329/src/libmaix_nn_decoder/src/: libmaix_nn_decoder.c  libmaix_nn_decoder.h
components/libmaix/lib/arch/r329/src/libmaix_utils/: CMakeLists.txt
components/libmaix/lib/arch/r329/src/libmaix_utils/src/: libmaix_log.c
components/libmaix/src/: libmaix.c
components/maix/: CMakeLists.txt  Kconfig
components/maix/include/: maix_debug.h
components/maix/src/: unit_test.cpp
components/maix_copy/: Kconfig
components/maix_copy/src/: nn_test.hpp  xxxx_ctrl.cpp  xxxx_uvai.cpp  xxxx_uvai.hpp
components/maix_cv_image/: CMakeLists.txt  Kconfig
components/maix_cv_image/include/: libmaix_cv_image.h
components/maix_cv_image/src/: libmaix_cv_image.cpp
components/maix_dls831/: CMakeLists.txt  Kconfig
components/maix_dls831/include/: costom_imlib_config.h  gpio_lib.hpp  linux_gpio.h  utf8togb2312.h
components/maix_dls831/lib/: gpio_lib.cpp  linux_gpio.c  utf8togb2312.c
components/maix_dls831/src/: dls831_ctrl.cpp  dls831_uvai.cpp  dls831_uvai.hpp
components/maix_gs831/: CMakeLists.txt  Kconfig
components/maix_gs831/include/: json5pp.hpp  linux_uart.h
components/maix_gs831/lib/: linux_uart.c
components/maix_gs831/src/: find_apriltag.hpp  gs831_ctrl.cpp  gs831_uvai.cpp  gs831_uvai.hpp
components/maix_speech/: CMakeLists.txt  Kconfig
components/maix_speech/include/: libmaix_mfcc.h
components/maix_speech/mfcc/: libmaix_mfcc.cpp  libmaix_mfcc.h
components/maix_speech/speech/: libmaix_speech.cpp  libmaix_speech.h
components/maix_speech/src/: libmaix_mfcc.cpp
components/maix_xxxx/: CMakeLists.txt
components/maix_xxxx/src/: nn_test.hpp  xxxx_uvai.cpp  xxxx_uvai.hpp
examples/app_dls831/: CMakeLists.txt  Makefile  adb_push_dist.py  build_dist.sh  config_defaults.mk  sum_test.c
examples/app_dls831/main/: CMakeLists.txt
examples/app_gs831/: adb_push_dist.py  build_dist.sh  config_defaults.mk
examples/app_gs831/main/: CMakeLists.txt  app_gs831.lds
examples/app_maix/: Makefile  config_defaults.mk
examples/app_maix/main/: CMakeLists.txt
examples/app_xxxx/: Makefile  config_defaults.mk  gs_test.py
examples/app_xxxx/main/: CMakeLists.txt
examples/axpi/: config_defaults.mk
examples/axpi/main/: CMakeLists.txt
examples/axpi/main/src/: main.c
examples/axpi_classification_cam/main/: CMakeLists.txt
examples/axpi_classification_cam/main/include/: main.h
examples/axpi_classification_cam/main/src/: labels.c  main.cpp
examples/axpi_yolov5_cam/: readme.md
examples/axpi_yolov5_cam/compile/: gen_binary.cmake
examples/camera/: config_defaults.mk
examples/camera/main/: CMakeLists.txt
examples/camera_opencv/: README.md  config_defaults.mk
examples/camera_opencv/main/: CMakeLists.txt
examples/demo1/main/: CMakeLists.txt
examples/display/compile/: priority.conf
examples/display/main/: CMakeLists.txt
examples/hello-world/: CMakeLists.txt  config_defaults.mk
examples/hello-world/main/: CMakeLists.txt
examples/imlib_test/: .config.mk  Makefile  config_defaults.mk
examples/imlib_test/main/: CMakeLists.txt
examples/mpp_v83x_vivo/: config_defaults.mk
examples/mpp_v83x_vivo/main/: CMakeLists.txt
examples/nn_LPR/: README.md
examples/nn_mask/main/: CMakeLists.txt
examples/nn_resnet/: CMakeLists.txt  README.md  project.py
examples/nn_retinaface_mdsc/: project.py  v831_retinaface.mdsc
examples/nn_yolo_20class_mdsc/: README.md  config_defaults.mk
examples/self_learn_classifier/: README.md
examples/speech_demo/: config_defaults.mk
examples/speech_mfcc/: config_defaults.mk
examples/third_party_demo/: config_defaults.mk
tools/cmake/: compile.cmake  compile_flags.cmake  gen_binary.cmake  project.py  start_app_v831.sh
(+116 files in other folders)
